@@ -19,7 +19,7 @@
 #include /**/ "ace/pre.h"
 
 #include "orbsvcs/TimeServiceS.h"
-#include "orbsvcs/Time/time_export.h"
+#include "orbsvcs/Time/time_serv_export.h"
 
 TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
@@ -35,7 +35,7 @@ TAO_BEGIN_VERSIONED_NAMESPACE_DECL
  * manages the UTOs and the TIOs. The notion of time returned
  * here is the local time of the system.
  */
-class TAO_Time_Export TAO_Time_Service_Server : public POA_CosTime::TimeService
+class TAO_Time_Serv_Export TAO_Time_Service_Server : public POA_CosTime::TimeService
 {
 
 public:
